OEL-4850: Change api endpoint to save-tone.
